--- a/app/resources/templates/admin/admin-index.html
+++ b/app/resources/templates/admin/admin-index.html
@@ -3,5 +3,5 @@
     <title>Admin Dashboard</title>
 {% endblock title %}
 {% block content %}
-admoin dashboard
+admin dashboard
 {% endblock content %}
