--- a/app/resources/templates/auth/loginForm.html
+++ b/app/resources/templates/auth/loginForm.html
@@ -16,7 +16,7 @@
                       </div>
                       
                       {% if fail %}
-                        <div style="border: 1px solid red; border-radius: 5px">
+                        <div class="bg-red-200 colr-red-600 p-5 rounded-lg">
                           <span class="px-3 text-red-600">Wrong Credentials!</span>
                         </div>
                       {% endif %}
