--- a/app/resources/templates/users/edit.html
+++ b/app/resources/templates/users/edit.html
@@ -12,12 +12,12 @@
 {% block main_content %}
 <div class="container p-5">
     {% if msgOldPwd %}
-        <div style="border: 1px solid red; border-radius: 5px">
+        <div class="bg-red-200 colr-red-600 p-5 rounded-lg">
           <span class="px-3 text-red-600">Current password is not correct!</span>
         </div>
     {% endif %}
     {% if msgNewPwd %}
-        <div style="border: 1px solid red; border-radius: 5px">
+        <div class="bg-red-200 colr-red-600 p-5 rounded-lg">
           <span class="px-3 text-red-600">New password have less then 4 character!</span>
         </div>
     {% endif %}
@@ -65,7 +65,7 @@
                     <option value="admin">Admin</option>
                 </select>
             </div>
-            
+            {% endif %}
             <div class="flex justify-between mb-10 p-3">
                 <div class="w-1/3 md:h-48 md:w-56 h-24 w-24 rounded-full overflow-hidden mb-10 mr-10 mt-auto mb-auto">
                     <img class="w-full h-full object-cover avatar" data-tippy-content="{{ post.user.name }}" src="https://source.unsplash.com/collection/10865343" alt="{{ post.user.name }}" tabindex="0">
