--- a/app/resources/templates/admin/users-index.html
+++ b/app/resources/templates/admin/users-index.html
@@ -14,9 +14,9 @@
                     <a href="/users/{{ user.id }}" class="text-2xl no-underline hover:underline mr-5">{{ user.name }}</a>
                 </div>
             </div>
-            <div class="my-auto mb-5 md-mb-0 w-1/3">
-                <a href="/users/{{ user.id }}" class="text-2xl no-underline hover:underline mr-5">{{ user.title }}</a>
-                <div class="text-sm my-auto">{{ user.createdAt|date('d.m.Y H:i') }}</div>
+            <div class="m-auto mb-5 md-mb-0 w-1/3">
+                <div class="text-2xl no-underline mr-5 w-full">Role: {{ user.role }}</div>
+                <div class="text-sm my-auto">Created at: {{ user.createdAt|date('d.m.Y H:i') }}</div>
             </div>
             <div class="flex md:w-1/3">
                 <div class="ml-auto mr-5">
