--- a/app/resources/templates/posts/index-posts.html
+++ b/app/resources/templates/posts/index-posts.html
@@ -58,9 +58,9 @@
                 </div>
                 {% endif %}
             </a>
-            <div class="md:w-1/2 p-2 text-xl text-left flex-wrap content-between relative">
-                <div class="md:absolute top-0 mb-3">
-                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste nihil consequatur repellendus voluptates necessitatibus eligendi at ea odit. Est praesentium hic odio consequatur ullam repudiandae!
+            <div class="md:w-1/2 p-2 text-xl text-justify flex-wrap content-between relative">
+                <div class="md:absolute top-2 mb-3 mt-3">
+                   <p class="text-gray-800 font-serif text-base px-4">{{ post.body|length > 280 ? post.body|striptags|slice(0, 280) ~ '...' : post.body|raw  }}</p>
                 </div>
                 <div class="md:absolute inset-x-0 bottom-0 text-right mr-2 mb-2">
                     <a href="posts/{{ post.id }}"><button class="p-3 w-full md:w-40 bg-orange-400 hover:bg-orange-300 rounded-lg"> Read more ... </button></a>
